--- a/basic_version_20210528.ipynb
+++ b/basic_version_20210528.ipynb
@@ -12568,7 +12568,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LOQGULyLBqp1",
-        "outputId": "370d7b63-b5c3-4d7a-deea-414944430797"
+        "outputId": "329ca29b-2fc9-4d83-8090-71f33e14d01b"
       },
       "source": [
         "contests = rframe\n",
@@ -12576,7 +12576,7 @@
         "contests['opp_team'] = ['RIC','GWS','SYD','GEE','WCE','PAD','COL','HAW','BRI','GCS','WBD','STK','FRE','ADL','NME','CAR','MEL','ESS']\n",
         "contests.columns"
       ],
-      "execution_count": 126,
+      "execution_count": 127,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -12590,9 +12590,368 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 126
+          "execution_count": 127
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "xEshIK6iMZDC"
+      },
+      "source": [
+        "# create seperate lookup table which is a subset of contests:\n",
+        "lookup_vals = contests[['team','rating_n1']]\n",
+        "lookup_vals.columns = ['opp_team','rating_n1_opp']"
+      ],
+      "execution_count": 128,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kIDDtSAPMgkY"
+      },
+      "source": [
+        "joined = pd.merge(contests, \n",
+        "                      lookup_vals, \n",
+        "                      on ='opp_team', \n",
+        "                      how ='left')"
+      ],
+      "execution_count": 129,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 607
+        },
+        "id": "kDEBNCzfMm4X",
+        "outputId": "d4ca2834-2f04-4d90-ad18-5de8414dcd36"
+      },
+      "source": [
+        "## Now the formula for win probability can be applied row by row:\n",
+        "joined['win_prob'] = round(1/(1 + (10**((joined['rating_n1_opp'] - joined['rating_n1'])/400))), ndigits = 3)\n",
+        "joined"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>team</th>\n",
+              "      <th>seq</th>\n",
+              "      <th>win_prob_n1</th>\n",
+              "      <th>rating_n2</th>\n",
+              "      <th>actual_n1</th>\n",
+              "      <th>rating_n1</th>\n",
+              "      <th>opp_team</th>\n",
+              "      <th>rating_n1_opp</th>\n",
+              "      <th>win_prob</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.347</td>\n",
+              "      <td>1469.2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1462.3</td>\n",
+              "      <td>RIC</td>\n",
+              "      <td>1523.0</td>\n",
+              "      <td>0.414</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BRI</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.527</td>\n",
+              "      <td>1531.4</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1540.9</td>\n",
+              "      <td>GWS</td>\n",
+              "      <td>1485.4</td>\n",
+              "      <td>0.579</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>CAR</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0.532</td>\n",
+              "      <td>1475.1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1464.5</td>\n",
+              "      <td>SYD</td>\n",
+              "      <td>1534.1</td>\n",
+              "      <td>0.401</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>COL</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0.368</td>\n",
+              "      <td>1451.5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1444.1</td>\n",
+              "      <td>GEE</td>\n",
+              "      <td>1537.3</td>\n",
+              "      <td>0.369</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>ESS</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0.578</td>\n",
+              "      <td>1473.8</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1482.2</td>\n",
+              "      <td>WCE</td>\n",
+              "      <td>1536.7</td>\n",
+              "      <td>0.422</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>FRE</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0.445</td>\n",
+              "      <td>1487.0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1478.1</td>\n",
+              "      <td>PAD</td>\n",
+              "      <td>1553.0</td>\n",
+              "      <td>0.394</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>GEE</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0.579</td>\n",
+              "      <td>1528.9</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1537.3</td>\n",
+              "      <td>COL</td>\n",
+              "      <td>1444.1</td>\n",
+              "      <td>0.631</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>GCS</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0.421</td>\n",
+              "      <td>1473.7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1465.3</td>\n",
+              "      <td>HAW</td>\n",
+              "      <td>1443.3</td>\n",
+              "      <td>0.532</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>GWS</td>\n",
+              "      <td>9</td>\n",
+              "      <td>0.452</td>\n",
+              "      <td>1494.4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1485.4</td>\n",
+              "      <td>BRI</td>\n",
+              "      <td>1540.9</td>\n",
+              "      <td>0.421</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>HAW</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0.468</td>\n",
+              "      <td>1452.7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1443.3</td>\n",
+              "      <td>GCS</td>\n",
+              "      <td>1465.3</td>\n",
+              "      <td>0.468</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>MEL</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0.653</td>\n",
+              "      <td>1579.0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1585.9</td>\n",
+              "      <td>WBD</td>\n",
+              "      <td>1569.1</td>\n",
+              "      <td>0.524</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>NME</td>\n",
+              "      <td>12</td>\n",
+              "      <td>0.422</td>\n",
+              "      <td>1419.4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1411.0</td>\n",
+              "      <td>STK</td>\n",
+              "      <td>1483.8</td>\n",
+              "      <td>0.397</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>PAD</td>\n",
+              "      <td>13</td>\n",
+              "      <td>0.632</td>\n",
+              "      <td>1545.6</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1553.0</td>\n",
+              "      <td>FRE</td>\n",
+              "      <td>1478.1</td>\n",
+              "      <td>0.606</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>13</th>\n",
+              "      <td>RIC</td>\n",
+              "      <td>14</td>\n",
+              "      <td>0.473</td>\n",
+              "      <td>1512.5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1523.0</td>\n",
+              "      <td>ADL</td>\n",
+              "      <td>1462.3</td>\n",
+              "      <td>0.586</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>14</th>\n",
+              "      <td>STK</td>\n",
+              "      <td>15</td>\n",
+              "      <td>0.402</td>\n",
+              "      <td>1491.8</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1483.8</td>\n",
+              "      <td>NME</td>\n",
+              "      <td>1411.0</td>\n",
+              "      <td>0.603</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>15</th>\n",
+              "      <td>SYD</td>\n",
+              "      <td>16</td>\n",
+              "      <td>0.555</td>\n",
+              "      <td>1525.2</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1534.1</td>\n",
+              "      <td>CAR</td>\n",
+              "      <td>1464.5</td>\n",
+              "      <td>0.599</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>16</th>\n",
+              "      <td>WBD</td>\n",
+              "      <td>17</td>\n",
+              "      <td>0.598</td>\n",
+              "      <td>1561.1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1569.1</td>\n",
+              "      <td>MEL</td>\n",
+              "      <td>1585.9</td>\n",
+              "      <td>0.476</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>17</th>\n",
+              "      <td>WCE</td>\n",
+              "      <td>18</td>\n",
+              "      <td>0.548</td>\n",
+              "      <td>1527.7</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1536.7</td>\n",
+              "      <td>ESS</td>\n",
+              "      <td>1482.2</td>\n",
+              "      <td>0.578</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   team  seq  win_prob_n1  ...  opp_team  rating_n1_opp  win_prob\n",
+              "0   ADL    1        0.347  ...       RIC         1523.0     0.414\n",
+              "1   BRI    2        0.527  ...       GWS         1485.4     0.579\n",
+              "2   CAR    3        0.532  ...       SYD         1534.1     0.401\n",
+              "3   COL    4        0.368  ...       GEE         1537.3     0.369\n",
+              "4   ESS    5        0.578  ...       WCE         1536.7     0.422\n",
+              "5   FRE    6        0.445  ...       PAD         1553.0     0.394\n",
+              "6   GEE    7        0.579  ...       COL         1444.1     0.631\n",
+              "7   GCS    8        0.421  ...       HAW         1443.3     0.532\n",
+              "8   GWS    9        0.452  ...       BRI         1540.9     0.421\n",
+              "9   HAW   10        0.468  ...       GCS         1465.3     0.468\n",
+              "10  MEL   11        0.653  ...       WBD         1569.1     0.524\n",
+              "11  NME   12        0.422  ...       STK         1483.8     0.397\n",
+              "12  PAD   13        0.632  ...       FRE         1478.1     0.606\n",
+              "13  RIC   14        0.473  ...       ADL         1462.3     0.586\n",
+              "14  STK   15        0.402  ...       NME         1411.0     0.603\n",
+              "15  SYD   16        0.555  ...       CAR         1464.5     0.599\n",
+              "16  WBD   17        0.598  ...       MEL         1585.9     0.476\n",
+              "17  WCE   18        0.548  ...       ESS         1482.2     0.578\n",
+              "\n",
+              "[18 rows x 9 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Jrg3GZxAM3MP"
+      },
+      "source": [
+        "| Home team | Away Team | Venue |Favorite (Herald-Sun) | Location advantage | ELO predicted winner | ELO fav. win prob|\n",
+        "| :--- | :--- | :--- | :--- | :--- | :--- | :--- |\n",
+        "|Western Bulldogs|Melbourne|Docklands Stadium|Western Bulldogs|no| MEL | 0.524 |\n",
+        "|Collingwood|Geelong|M.C.G.|Geelong|no| GEE| 0.631 |\n",
+        "|Brisbane|GWS Giants|Gabba|Brisbane|yes| BRI |0.579 |\n",
+        "|St Kilda|North Melbourne|Docklands Stadium|St Kilda|no|STK | 0.603|\n",
+        "|Gold Coast|Hawthorn|S.C.G. (relocated)| Gold Coast|no| GCS|0.631 |\n",
+        "|West Coast|Essendon|Perth Stadium|West Coast|yes|WCE | 0.578|\n",
+        "|Richmond|Adelaide|Giants Stadium (relocated)|Richmond|no| RIC|0.586 |\n",
+        "|Sydney|Carlton|S.C.G.|Sydney|yes| SYD| 0.599|\n",
+        "|Port Adelaide|Fremantle|Adelaide Oval|Port Adelaide|yes|PAD | 0.606|"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "antxf0jQNEL1"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
