--- a/basic_version_post_R12.ipynb
+++ b/basic_version_post_R12.ipynb
@@ -14462,14 +14462,39 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FVZo6krZrI0H"
+      },
+      "source": [
+        "## **Week 13**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B04Ue7rUrP7C"
+      },
+      "source": [
+        "| Home team | Away Team | Venue |Favorite (Herald-Sun) | Location advantage |\n",
+        "| :--- | :--- | :--- | :--- | :--- |\n",
+        "|Port Adelaide|Geelong|Adelaide Oval|||\n",
+        "|Sydney|Hawthorn|S.C.G.|||\n",
+        "|||Adelaide Oval|||\n",
+        "|||Perth Stadium|||\n",
+        "|||S.C.G.|||\n",
+        "|||Perth Stadium|||"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "r6sVA53ce9wk"
+        "id": "OiQp6jtWrmLP"
       },
       "source": [
         ""
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": []
     }
   ]
