--- a/basic_version_wip_R13.ipynb
+++ b/basic_version_wip_R13.ipynb
@@ -12240,6 +12240,26 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "hLATNslP0ieI"
+      },
+      "source": [
+        "## PLACEHOLDER **W10** ADD QUICK RESULTS CHECK and/or QRC"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CQCZNA7H0b9p"
+      },
+      "source": [
+        "## PLACEHOLDER ADD QUICK RESULTS CHECK and/or QRC"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "8UZSN50coqOF"
       },
       "source": [
@@ -12921,6 +12941,15 @@
           },
           "execution_count": 129
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GFeYFSko0xy2"
+      },
+      "source": [
+        "## PLACEHOLDER **W11** ADD QUICK RESULTS CHECK and/or QRC"
       ]
     },
     {
@@ -14448,6 +14477,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "TF53bHIx045Z"
+      },
+      "source": [
+        "## PLACEHOLDER **W12** ADD QUICK RESULTS CHECK and/or QRC"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Gzv2426sc7Ww"
       },
       "source": [
@@ -14508,6 +14546,18 @@
         "rframe_b = joined_bye[['team','seq','rating_n1']]"
       ],
       "execution_count": 145,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EHtXiIiXzgYH"
+      },
+      "source": [
+        "# Add the actuals (results from R12):\n",
+        "rframe['actual_n1'] = quick_results_check['actual']"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
