Replaced all 'ELO' with 'Elo'

--- a/basic_version_wip_R13.ipynb
+++ b/basic_version_wip_R13.ipynb
@@ -33,7 +33,7 @@
         "id": "MsDj6Fg0IzMr"
       },
       "source": [
-        "### **Pilot ELO ratings for AFL 2021 season**"
+        "### **Pilot Elo ratings for AFL 2021 season**"
       ]
     },
     {
@@ -3672,15 +3672,6 @@
       ]
     },
     {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "k4gUwthp4Dlo"
-      },
-      "source": [
-        "## HOLDING"
-      ]
-    },
-    {
       "cell_type": "code",
       "metadata": {
         "colab": {
@@ -4383,7 +4374,7 @@
         "id": "R2zCWlwd5LLi"
       },
       "source": [
-        "*For Week 3, perhaps we can take a look at predicted win ELO win , versus actual. A greater than 50% chance translates to a prediected win - the **win_prob_w3** column will be compared to actual results.*"
+        "*For Week 3, perhaps we can take a look at predicted win Elo win , versus actual. A greater than 50% chance translates to a prediected win - the **win_prob_w3** column will be compared to actual results.*"
       ]
     },
     {
@@ -5004,7 +4995,7 @@
         "id": "B6DAjRsVHakM"
       },
       "source": [
-        "| Match | Home | Away | Winner | ELO Prediction | If predicted correctly |\n",
+        "| Match | Home | Away | Winner | Elo Prediction | If predicted correctly |\n",
         "| --- | --- | --- | --- | --- | --- |\n",
         "|1|COL| BRI|BRI (Brisbane)|COL | No |\n",
         "|2|NME|WBD| WBD (Western Bulldogs)| WBD|Yes |\n",
@@ -5020,7 +5011,7 @@
         "id": "i63EhmqLIe0y"
       },
       "source": [
-        "So only 2 out of the six games were predicted correctly, however we'll need more weeks' results to initialise the ELO and allow the accuracy to 'warm up'."
+        "So only 2 out of the six games were predicted correctly, however we'll need more weeks' results to initialise the Elo and allow the accuracy to 'warm up'."
       ]
     },
     {
@@ -5042,7 +5033,7 @@
         "* 1.Ratings rating_w3\n",
         "* 2 Insert matchups\n",
         "* 3 Calculate win probs\n",
-        "* 4.Compare ELO predictions to actual results"
+        "* 4.Compare Elo predictions to actual results"
       ]
     },
     {
@@ -6440,7 +6431,7 @@
         "id": "QJip82QwAcJt"
       },
       "source": [
-        "| Match | Home | Away | Winner | ELO Prediction | If predicted correctly |\n",
+        "| Match | Home | Away | Winner | Elo Prediction | If predicted correctly |\n",
         "| --- | --- | --- | --- | --- | --- |\n",
         "|1|SYD| ESS |SYD (Sydney) | SYD | Yes |\n",
         "|2| PAD|RIC| PAD (Port Adelaide)| RIC |No |\n",
@@ -7451,7 +7442,7 @@
         "outputId": "027271bb-abb5-4075-ce88-2fbecc0bed26"
       },
       "source": [
-        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
       ],
       "execution_count": 59,
       "outputs": [
@@ -7769,7 +7760,7 @@
         "id": "HwwlG9FcTi7U"
       },
       "source": [
-        "**Ladder after R5 by ELO ratings:**"
+        "**Ladder after R5 by Elo ratings:**"
       ]
     },
     {
@@ -8672,7 +8663,7 @@
         "outputId": "5d0e98e8-0fbd-4290-e3f3-4b7d073d8f91"
       },
       "source": [
-        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
       ],
       "execution_count": 75,
       "outputs": [
@@ -9523,7 +9514,7 @@
         "outputId": "ec3e9ffc-0839-4e7a-9193-b0d3076740a0"
       },
       "source": [
-        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
       ],
       "execution_count": 89,
       "outputs": [
@@ -10384,7 +10375,7 @@
         "outputId": "01abad14-9998-4e05-f018-431f7a8fd91e"
       },
       "source": [
-        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
       ],
       "execution_count": 102,
       "outputs": [
@@ -11228,7 +11219,7 @@
         "outputId": "03a30857-5cc2-4834-97eb-428facb8f212"
       },
       "source": [
-        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
       ],
       "execution_count": 114,
       "outputs": [
@@ -11265,7 +11256,7 @@
         "id": "JQRMgiIvb7zv"
       },
       "source": [
-        "**Expectations:** After 9 rounds, the ELO ratings have developed enough to expect better than 50% success in most weeks. Teams have now played nine out of the other 17 teams. The main flaw in the the ELO predictions don't factor in home ground and/or city advantage as yet. This is particularly important where one of teams is from Queensland, Sydney, SA or WA."
+        "**Expectations:** After 9 rounds, the Elo ratings have developed enough to expect better than 50% success in most weeks. Teams have now played nine out of the other 17 teams. The main flaw in the the Elo predictions don't factor in home ground and/or city advantage as yet. This is particularly important where one of teams is from Queensland, Sydney, SA or WA."
       ]
     },
     {
@@ -11322,7 +11313,7 @@
         "id": "USFaGox-qnpq"
       },
       "source": [
-        "From the five matches with a location advantage, the one that appears to be most finely balanced according to the Herald-Sun's published tips is Fremantle (17) v Sydney (10). I would expect the ELO to give a higher probability to Sydney, since it doesn't yet factor in location advantages. However, Fremantle would have a very good chance, arguably better than 50%."
+        "From the five matches with a location advantage, the one that appears to be most finely balanced according to the Herald-Sun's published tips is Fremantle (17) v Sydney (10). I would expect the Elo to give a higher probability to Sydney, since it doesn't yet factor in location advantages. However, Fremantle would have a very good chance, arguably better than 50%."
       ]
     },
     {
@@ -12479,7 +12470,7 @@
         "outputId": "6f7e9cc3-28b5-404f-c026-8120aacd18d0"
       },
       "source": [
-        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
       ],
       "execution_count": 127,
       "outputs": [
@@ -12516,7 +12507,7 @@
         "id": "FEFMlcBln7nX"
       },
       "source": [
-        "Of course this is a very small sample, but interesting to see that for Round 9 this basic ELO system scored 6/9 correctly. The three incorrect ELO predictions were all 'location advantage' games, where the lesser ranked home team won."
+        "Of course this is a very small sample, but interesting to see that for Round 9 this basic Elo system scored 6/9 correctly. The three incorrect Elo predictions were all 'location advantage' games, where the lesser ranked home team won."
       ]
     },
     {
@@ -13420,7 +13411,7 @@
         "outputId": "6271d54c-40bf-40cb-a150-ea2bfd429b44"
       },
       "source": [
-        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
       ],
       "execution_count": 144,
       "outputs": [
@@ -13439,7 +13430,7 @@
         "id": "Jrg3GZxAM3MP"
       },
       "source": [
-        "| Home team | Away Team | Venue |Favorite (Herald-Sun) | Location advantage | ELO predicted winner | ELO fav. win prob| Winner & margin | ELO correct |\n",
+        "| Home team | Away Team | Venue |Favorite (Herald-Sun) | Location advantage | Elo predicted winner | Elo fav. win prob| Winner & margin | Elo correct |\n",
         "| :--- | :--- | :--- | :--- | :--- | :--- | :--- |:--- | :--- |\n",
         "|Western Bulldogs|Melbourne|Docklands Stadium|Western Bulldogs|no| MEL | 0.524 |MEL (28)|<font color='green'>yes</font>|\n",
         "|Collingwood|Geelong|M.C.G.|Geelong|no| GEE| 0.631 |GEE (10)|<font color='green'>yes</font>|\n",
@@ -15149,7 +15140,7 @@
       "source": [
         "win_correct = qrc[qrc['fav_calc'] > 0.5]\n",
         "yep = win_correct['actual'].sum()\n",
-        "print('The ELO predictions were correct for %d out of the %d matches' % (yep, played) )"
+        "print('The Elo predictions were correct for %d out of the %d matches' % (yep, played) )"
       ],
       "execution_count": 161,
       "outputs": [
