--- a/basic_version_wip_R13.ipynb
+++ b/basic_version_wip_R13.ipynb
@@ -15161,12 +15161,12 @@
       "source": [
         "| Home team | Away Team | Venue |Favorite (Herald-Sun) | Location advantage |Elo predicted winner|Elo fav. win prob|Winner & margin| Elo correct|\n",
         "| :--- | :--- | :--- | :--- | :--- |:--- | :--- | :--- |:--- |\n",
-        "|Melbourne|Brisbane|Giants Stadium||no|MEL|0.566|MEL (18)|yes|\n",
-        "|StKilda|Sydney|S.C.G.||yes|SYD|0.600|SYD (9)|yes|\n",
-        "|Adelaide|Collingwood|Adelaide Oval||yes|ADL|0.525|COL (5)|no|\n",
-        "|Essendon|Richmond|Perth Stadium||no|RIC|0.554|RIC (39)|yes|\n",
-        "|Carlton|West Coast|S.C.G.||no|WCE|0.625|WCE (22)|yes|\n",
-        "|Fremantle|Western Bulldogs|Perth Stadium||yes|WBD|0.652|WBD (28)|yes|"
+        "|Melbourne|Brisbane|Giants Stadium|MEL|no|MEL|0.566|MEL (18)|yes|\n",
+        "|StKilda|Sydney|S.C.G.|SYD|yes|SYD|0.600|SYD (9)|yes|\n",
+        "|Adelaide|Collingwood|Adelaide Oval|ADL|yes|ADL|0.525|COL (5)|no|\n",
+        "|Essendon|Richmond|Perth Stadium|RIC|no|RIC|0.554|RIC (39)|yes|\n",
+        "|Carlton|West Coast|S.C.G.|WCE|no|WCE|0.625|WCE (22)|yes|\n",
+        "|Fremantle|Western Bulldogs|Perth Stadium|WBD|yes|WBD|0.652|WBD (28)|yes|"
       ]
     },
     {
@@ -15215,7 +15215,7 @@
         "## Also need same from bye teams, however they don't have win_prob which is the most recent round's win_prob.\n",
         "rframe_b = joined_bye[['team','seq','rating_n1']]"
       ],
-      "execution_count": 145,
+      "execution_count": 162,
       "outputs": []
     },
     {
@@ -15227,7 +15227,7 @@
         "# Add the actuals (results from R12):\n",
         "rframe['actual_n1'] = quick_results_check['actual']"
       ],
-      "execution_count": null,
+      "execution_count": 163,
       "outputs": []
     },
     {
